<resources>
    <string name="app_name">Vendas</string>
    <string name="name">Nome</string>
    <string name="account_name">Nome da conta</string>
    <string name="age">Idade</string>
    <string name="email">Email</string>
    <string name="description">Descrição</string>
    <string name="password">Senha</string>
    <string name="place">Local</string>
    <string name="value">Valor</string>
    <string name="login">Login</string>
    <string name="gender">Gênero</string>
    <string name="male">Masculino</string>
    <string name="female">Feminino</string>
    <string name="other">Outro</string>
    <string name="create_profile">Criar perfil</string>
    <string name="create_account">Criar conta</string>
    <string name="save">Salvar</string>
    <string name="clear">Limpar</string>
    <string name="account_responsible">Responsável da conta</string>
    <string name="balance">Saldo</string>
    <string name="debit">Débito</string>
    <string name="credit">Crédito</string>
    <string name="account_type">Tipo de conta</string>
    <string name="create">criar</string>
    <string name="new_user">Novo por aqui?</string>
    <string name="register">Registre-se</string>
    <string name="transactions">Transações</string>
    <string name="home_new_transaction">Nova transação</string>
    <string name="home_bank_bt_see_operations">Extrato</string>
    <string name="home_balance_available">Saldo disponível</string>
    <string name="home_hello">Olá, %s</string>
    <string name="home_next_invoice">Próxima fatura</string>
    <string name="deposit">Depositar</string>
    <string name="withdraw">Sacar</string>
    <string name="new_here">Novo por aqui?</string>
</resources>